<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.women.WomenFragment">


    <Button
        android:id="@+id/womenButtonOne"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rc_women_one"
        android:text="@string/button_MindSpot"
        android:textColor="#293F6C"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/womenButtonThree"
        app:layout_constraintEnd_toStartOf="@+id/womenButtonTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/womenButtonTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rc_women_two"
        android:text="@string/button_Qlife"
        android:textAllCaps="false"
        android:textColor="#293F6C"
        android:typeface="sans"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/womenButtonFour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/womenButtonOne"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/womenButtonThree"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rc_women_three"
        android:text="@string/button_SANE"
        android:textColor="#293F6C"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/womenButtonFive"
        app:layout_constraintEnd_toStartOf="@+id/womenButtonFour"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/womenButtonOne"/>

    <Button
        android:id="@+id/womenButtonFour"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rc_women_four"
        android:text="@string/button_RelationshipsAus"
        android:textColor="#293F6C"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/womenButtonSix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/womenButtonThree"
        app:layout_constraintTop_toBottomOf="@+id/womenButtonTwo"/>



    <Button
        android:id="@+id/womenButtonFive"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rc_women_five"
        android:text="@string/button_PANDA"
        android:textColor="#293F6C"
        android:textSize="24sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/womenEmergency"
        app:layout_constraintEnd_toStartOf="@+id/womenButtonSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/womenButtonThree" />


    <Button
        android:id="@+id/womenButtonSix"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rc_women_six"
        android:text="@string/button_ParentLife"
        android:textColor="#293F6C"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/womenEmergency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/womenButtonFive"
        app:layout_constraintTop_toBottomOf="@+id/womenButtonFour" />

    <Button
        android:id="@+id/womenEmergency"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FA877F"
        android:text="@string/button_Emergency000"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>