<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trauma.TraumaFragment">

    <Button
        android:id="@+id/traumaButtonOne"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rc_trauma_one"
        android:text="@string/button_OpenArms"
        android:textColor="#293F6C"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/traumaButtonThree"
        app:layout_constraintEnd_toStartOf="@+id/traumaButtonTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/traumaButtonTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rc_trauma_two"
        android:text="@string/button_MensLine"
        android:textAllCaps="false"
        android:textColor="#293F6C"
        android:typeface="sans"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/traumaButtonFour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/traumaButtonOne"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/traumaButtonThree"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rc_trauma_three"
        android:text="@string/button_RESPECT1800"
        android:textColor="#293F6C"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/traumaButtonFive"
        app:layout_constraintEnd_toStartOf="@+id/traumaButtonFour"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/traumaButtonOne"/>

    <Button
        android:id="@+id/traumaButtonFour"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rc_trauma_four"
        android:text="@string/button_BlueKnot"
        android:textColor="#293F6C"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/traumaButtonSix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/traumaButtonThree"
        app:layout_constraintTop_toBottomOf="@+id/traumaButtonTwo"/>



    <Button
        android:id="@+id/traumaButtonFive"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rc_trauma_five"
        android:text="@string/button_SAMSN"
        android:textColor="#293F6C"
        android:textSize="24sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/traumaEmergency"
        app:layout_constraintEnd_toStartOf="@+id/traumaButtonSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/traumaButtonThree" />


    <Button
        android:id="@+id/traumaButtonSix"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rc_trauma_six"
        android:text="@string/button_MenRS"
        android:textColor="#293F6C"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/traumaEmergency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/traumaButtonFive"
        app:layout_constraintTop_toBottomOf="@+id/traumaButtonFour" />

    <Button
        android:id="@+id/traumaEmergency"
        android:textAllCaps="false"
        android:typeface="sans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FA877F"
        android:text="@string/button_Emergency000"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>